# fbpanel

./: .gitignore  CHANGELOG  CHANGELOG.md  CMakeLists.txt  COPYING  CREDITS  INSTALL.md  Makefile  Makefile.common  NOTES  README  README.md  TODO  bottom1  config.h.in  configure  dbg.h  fbpanel-2009.ebuild  fbpanel.ebuild  index.thtml  plugins.html  shots.html  shots.thtml  version.in
.config/: help  options.py  repl.py  rules.mk  tar.py
configs/: bottom  default
data/: Makefile
data/config/: .gitignore  Makefile  default.in
data/images/: Makefile
data/man/: .gitignore  Makefile  fbpanel.1.in
docs/: guidelines.md
exec/: .gitignore  Makefile  fbpanel_hibernate  fbpanel_reboot  fbpanel_shutdown  fbpanel_suspend  make_profile.in  xlogout
panel/: .gitignore  Makefile  bg.c  bg.h  ev.c  ev.h  gconf.c  gconf.h  gconf_panel.c  gconf_plugins.c  gtkbar.c  gtkbar.h  gtkbgbox.c  gtkbgbox.h  misc.c  misc.h  panel.c  panel.h  plugin.c  plugin.h  run.c  run.h  xconf.c  xconf.h
plugins/: Makefile
plugins/battery/: .gitignore  Makefile  Makefile-test  battery.c  main.c  os_linux.c  power_supply.c  power_supply.h
plugins/batterytext/: .gitignore  Makefile  batterytext.c
plugins/chart/: .gitignore  Makefile  chart.c  chart.h
plugins/clip/: Makefile  clip.c
plugins/cpu/: .gitignore  Makefile  cpu.c
plugins/dclock/: .gitignore  Makefile  dclock.c
plugins/deskno/: .gitignore  Makefile  deskno.c
plugins/deskno2/: #Makefile#  .gitignore  Makefile  deskno2.c
plugins/genmon/: .gitignore  Makefile  genmon.c
plugins/icons/: .gitignore  Makefile  icons.c
plugins/image/: .gitignore  Makefile  image.c
plugins/launchbar/: .gitignore  Makefile  launchbar.c
plugins/mem/: .gitignore  Makefile  mem.c  mt.h
plugins/mem2/: .gitignore  Makefile  mem2.c
plugins/menu/: .gitignore  Makefile  menu.c  menu.h  system_menu.c
plugins/meter/: .gitignore  Makefile  meter.c  meter.h
plugins/net/: .gitignore  Makefile  net.c
plugins/pager/: .gitignore  Makefile  pager.c
plugins/runbox/: Makefile  runbox.c
plugins/separator/: .gitignore  Makefile  separator.c
plugins/space/: .gitignore  Makefile  space.c
plugins/systray/: Makefile
plugins/taskbar/: .gitignore  Makefile  taskbar.c
plugins/tclock/: .gitignore  Makefile  tclock.c
plugins/tray/: .gitignore  egg-marshal.c  eggtraymanager.c  main.c
plugins/unstable/: Makefile
plugins/unstable/test/: Makefile  test.c
plugins/user/: .gitignore  Makefile  user.c
plugins/vbox/: Makefile  vbox.c
plugins/volume/: .gitignore  Makefile  volume.c
plugins/wincmd/: .gitignore  Makefile  wincmd.c
po/: fr_FR.UTF-8.mo  fr_FR.UTF-8.po  it_IT.UTF-8.mo  it_IT.UTF-8.po  ru_RU.UTF-8.mo  ru_RU.UTF-8.po
scripts/: Makefile  create_po.sh  custom.sh  endianess.sh  funcs.sh  install.sh  install_locale.sh  install_locale.sh.in  mk_tar  rfs-pkg-config  update-proj.sh  update_po.sh
shots/: mk_gallery
shots/6.1-01/: text.html
widgets/: .gitignore  Makefile  enums.c  enums.h  fb-panel.c  fb-panel.h  fb-xed-bool.c  fb-xed-bool.h  fb-xed-color.c  fb-xed-color.h  fb-xed-enum.c  fb-xed-enum.h  fb-xed-int.c  fb-xed-int.h  fb-xed.c  fb-xed.h  test.c
widgets/json/: fb-panel.json  fb-xed-bool.json  fb-xed-color.json  fb-xed-enum.json  fb-xed-int.json  fb-xed.json
www/: Makefile  docs.html  docs.thtml  index.html  my.css  top
www/plugins/: Makefile  mk_gallery
www/shots/: Makefile  mk_gallery
www/shots/4.8-01/: text.html
www/shots/4.8-02/: text.html
www/shots/6.0-01/: text.html
